[package]
name = "rpc-test"
version = "0.1.0"
authors = ["leang27 <52003343+leang27@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "17.0"
jsonrpc-derive = "17.0"
jsonrpc-core-client = { version = "17.0", features = ["ipc", "http", "ws"] }
jsonrpc-tcp-server = "17.0"
jsonrpc-http-server = "17.0"
jsonrpc-ws-server = "17.0"
jsonrpc-ipc-server = "17.0"
jsonrpc-stdio-server = "17.0"
jsonrpc-pubsub = "17.0"
env_logger = "0.8.3"
serde = "1.0"
serde_derive = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "0.2", features = ["rt-core", "macros"] }